--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "jest": "^29.6.4",
-    "nodemon": "^3.0.1",
-    "pg-promise": "^11.5.4"
+    "mysql2": "^3.6.1",
+    "nodemon": "^3.0.1"
   }
 }
